fix carousel bug - no wrapping of whitespaces

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,7 +1,7 @@
 /*SPACING*/
 
 .main {
-  padding: 4.5rem 1rem !important;
+  padding: 4.5rem 1rem;
 }
 
 /*paddings general*/
